--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,87 +1,145 @@
 <!-- copy and paste your index.html page structure in here, markup the content provided after that -->
+<!doctype html>
+
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <title>Great Idea!</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+    <div class="container">
+        <header class="header-section">
+            <nav>
+                <a href="services.html">Services</a>
+                <a href="#">Product</a>
+                <a href="#">Vision</a>
+                <a href="#">Features</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+
+            <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        </header>
+
+        <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+
+        <section class="services-cta">
+            <div class="services-cta-text">
+                <h2>Services</h2>
+                <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+            </div>
+        </section>
+
+        <section class="services-main-content">
+            <div class="services-main-content-text-section">
+                <div class="services-main-content-text-block">
+                    <h4>Digital Design</h4>
+
+                    <p>
+                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                        eleifend. Mauris euismod facilisis iaculis.
+                    </p>
+
+                    <button>Learn More</button>
+                </div>
+
+                <div class="services-main-content-text-block">
+                    <h4>UX / UI</h4>
+
+                    <p>
+                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                        eleifend. Mauris euismod facilisis iaculis.
+                    </p>
+
+                    <button>Learn More</button>
+                </div>
+            </div>
 
 
-Services
-Product
-Vision
-Features
-About
-Contact
+            <div class="services-main-content-text-section">
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+                <div class="services-main-content-text-block">
+                    <h4>Digital Marketing</h4>
 
+                    <p>
+                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                        eleifend. Mauris euismod facilisis iaculis.
+                    </p>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+                    <button>Learn More</button>
+                </div>
 
-Services
+                 <div class="services-main-content-text-block">
+                        <h4>Web Development</h4>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+                        <p>
+                            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                            eleifend. Mauris euismod facilisis iaculis.
+                        </p>
 
+                        <button>Learn More</button>
+                    </div>
+            </div>
 
-Digital Design
+            <div class="services-main-content-text-section">
+                <div class="services-main-content-text-block">
+                    <h4>iOS Development</h4>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+                    <p>
+                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                        eleifend. Mauris euismod facilisis iaculis.
+                    </p>
 
-Learn More
+                    <button>Learn More</button>
+                </div>
 
+                <div class="services-main-content-text-block">
+                    <h4>Android Development</h4>
 
+                    <p>
+                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                        eleifend. Mauris euismod facilisis iaculis.
+                    </p>
 
-UX / UI
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </section>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+        <section class="services-secondary-content">
+            
+            <div class="services-secondary-content-text">
+                <h1>Some Facts About Our Services</h1>
 
-Learn More
+                <p>
+                    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                    eleifend. Mauris euismod facilisis iaculis.
+                </p>
 
+                <ul class="services-secondary-content-text-list">
+                    <li>Awesome thing</li>
+                    <li>Amazing thing</li>
+                    <li>Cool thing</li>
+                    <li>Great thing</li>
+                </ul>
+            </div>
 
+            <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+        </section>
 
-Digital Marketing
+        <footer>
+            <p>Copyright Great Idea! 2018</p>
+        </footer>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
+    </div>
+</body>
+</html>
