--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -26,8 +26,11 @@
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
-
-            <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+            <p>
+                <a href="index.html">
+                    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+                </a>
+            </p>
         </header>
 
         <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
