--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,148 +1,107 @@
-<!-- copy and paste your index.html page structure in here, markup the content provided after that -->
 <!doctype html>
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <title>Great Idea!</title>
+  <title>Great Idea!</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
 
-    <!--[if lt IE 9]>
+  <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-    <![endif]-->
+  <![endif]-->
 </head>
 
 <body>
-    <div class="container">
-        <header class="header-section">
-            <nav>
-                <a href="services.html">Services</a>
-                <a href="#">Product</a>
-                <a href="#">Vision</a>
-                <a href="#">Features</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </nav>
-            <p>
-                <a href="index.html">
-                    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-                </a>
-            </p>
-        </header>
-
-        <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
-        <section class="services-cta">
-            <div class="services-cta-text">
-                <h2>Services</h2>
-                <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-            </div>
-        </section>
-
-        <section class="services-main-content">
-            <div class="services-main-content-text-section">
-                <div class="services-main-content-text-block">
-                    <h4>Digital Design</h4>
-
-                    <p>
-                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                        eleifend. Mauris euismod facilisis iaculis.
-                    </p>
-
-                    <button>Learn More</button>
-                </div>
-
-                <div class="services-main-content-text-block">
-                    <h4>UX / UI</h4>
-
-                    <p>
-                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                        eleifend. Mauris euismod facilisis iaculis.
-                    </p>
-
-                    <button>Learn More</button>
-                </div>
-            </div>
 
 
-            <div class="services-main-content-text-section">
+Services
+Product
+Vision
+Features
+About
+Contact
 
-                <div class="services-main-content-text-block">
-                    <h4>Digital Marketing</h4>
+<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
-                    <p>
-                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                        eleifend. Mauris euismod facilisis iaculis.
-                    </p>
 
-                    <button>Learn More</button>
-                </div>
+<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
-                 <div class="services-main-content-text-block">
-                        <h4>Web Development</h4>
+Services
 
-                        <p>
-                            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                            eleifend. Mauris euismod facilisis iaculis.
-                        </p>
+Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
 
-                        <button>Learn More</button>
-                    </div>
-            </div>
 
-            <div class="services-main-content-text-section">
-                <div class="services-main-content-text-block">
-                    <h4>iOS Development</h4>
+Digital Design
 
-                    <p>
-                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                        eleifend. Mauris euismod facilisis iaculis.
-                    </p>
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
 
-                    <button>Learn More</button>
-                </div>
+Learn More
 
-                <div class="services-main-content-text-block">
-                    <h4>Android Development</h4>
 
-                    <p>
-                        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                        eleifend. Mauris euismod facilisis iaculis.
-                    </p>
 
-                    <button>Learn More</button>
-                </div>
-            </div>
-        </section>
+UX / UI
 
-        <section class="services-secondary-content">
-            
-            <div class="services-secondary-content-text">
-                <h1>Some Facts About Our Services</h1>
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
 
-                <p>
-                    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-                    eleifend. Mauris euismod facilisis iaculis.
-                </p>
+Learn More
 
-                <ul class="services-secondary-content-text-list">
-                    <li>Awesome thing</li>
-                    <li>Amazing thing</li>
-                    <li>Cool thing</li>
-                    <li>Great thing</li>
-                </ul>
-            </div>
 
-            <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-        </section>
 
-        <footer>
-            <p>Copyright Great Idea! 2018</p>
-        </footer>
+Digital Marketing
 
-    </div>
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
+
+Learn More
+
+
+
+Web Development
+
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
+
+Learn More
+
+
+
+iOS Development
+
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
+
+Learn More
+
+
+
+Android Development
+
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
+
+Learn More
+
+
+Some Facts About Our Services
+
+Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.
+
+
+Awesome thing
+Amazing thing
+Cool thing
+Great thing
+
+<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+
+Copyright Great Idea! 2018
+
 </body>
+
 </html>
